--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Web3 connection
-VITE_RPC_ENDPOINT="https://api.mainnet-beta.solana.com"
+VITE_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=1a525781-1bfc-4efd-8d20-c336dd22218b"
 # VITE_RPC_ENDPOINT="http://127.0.0.1:8899"
